# FGO-RIO-T

./: Dockerfile  README.md
IRS/: clean_files_rio_t.py  run_rio_t.sh
IRS/GT/: gym.txt  mocap_dark.txt  mocap_difficult.txt  mocap_easy.txt  mocap_medium.txt
fgo_rio_t/: CMakeLists.txt  package.xml
fgo_rio_t/config/: irs.yaml
fgo_rio_t/include/fgo_rio_t/: fgo_optimization.h  fgo_state.h  helper.h  odometry.h
fgo_rio_t/launch/: irs.launch
fgo_rio_t/msg/: time_offset.msg
fgo_rio_t/src/: fgo_optimization.cpp  fgo_state.cpp  odometry.cpp
